rebase-phonegap: switched to Leaflet, improving map launching, fixing startup query bug, clearer icons, correcting Spanish translations.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -88,8 +88,24 @@ h1 {
 
 .greenheader {
     /* background: mediumseagreen !important;  */
-    height: 36px;
+    height: 50px;
     border-style: none !important;
+}
+
+.ui-icon-custom-bars {
+    width: 30px;
+    height: 30px;
+    margin-left: 5px !important;
+    margin-top: 5px !important;
+    background:url(../img/icon_threebars.png) no-repeat center top; 
+}
+
+.ui-icon-custom-info {
+    width: 30px;
+    height: 30px;
+    margin-right: 5px !important;
+    margin-top: 5px !important;
+    background:url(../img/icon_info.png) no-repeat center top; 
 }
 
 #app-title {
@@ -140,7 +156,7 @@ h1 {
 
 #map {
     position : absolute;
-    top      : 36px;
+    top      : 50px;
     right    : 0;
     bottom   : 0px;
     left     : 0;
@@ -171,7 +187,6 @@ h1 {
     -webkit-box-shadow: none;
     box-shadow: none;
 }
-
 
 .abouttext {
     font-weight: light;
